# 2019-2nd-ML-month-with-KaKR-Solution

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/moai/: builder-agent.md  builder-plugin.md  builder-skill.md  expert-backend.md  expert-debug.md  expert-devops.md  expert-frontend.md  expert-performance.md  expert-refactoring.md  expert-security.md  expert-testing.md  manager-ddd.md  manager-docs.md  manager-git.md  manager-project.md  manager-quality.md  manager-spec.md  manager-strategy.md  manager-tdd.md  team-coder.md  team-designer.md  team-reader.md  team-tester.md  team-validator.md
.claude/commands/moai/: clean.md  codemaps.md  coverage.md  e2e.md  feedback.md  fix.md  github.md  loop.md  mx.md  plan.md  project.md  review.md  run.md  sync.md
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  (+9 more)
.moai/: manifest.json
.moai/docs/: MCP_OAUTH_SETUP.md
.moai/project/: product.md  structure.md  tech.md
input/: cv_score_single.csv  cv_score_stage1.csv  cv_score_stage2.csv  x_test_stage2.csv
notebook/: Generate Neighbor Info.ipynb  Generate Neighbor Stat.ipynb  Stacking Ensemble.ipynb  stacking_20190421093422.csv  utils.py
tutorial/: 01_ml_intro_and_eda.ipynb  02_feature_engineering.ipynb  02_modeling_and_feature_engineering.ipynb  03_geo_feature_engineering.ipynb  04_model_training_and_cv.ipynb  05_mlops_overview.ipynb  submission.csv
(+442 files in other folders)
