[project]
name = "kaggle-2019-house-price"
version = "1.0.0"
description = "2019 Kaggle Korea House Price Prediction - 11th Place Solution"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.24,<2",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3,<2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "tensorflow>=2.15,<3",
    "scipy>=1.11",
    "psutil>=5.9",
    "tqdm>=4.65",
    "ipykernel>=6.25",
    "jupyter>=1.0",
    "notebook>=7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
